This file lists all changes made to the game driver in all glory detail.
See the file HISTORY for a user-oriented summary of all the changes.

14-Jan-2009 (Gnomi)
  - (comm.c, pkg-mccp.c, configure)
    Use of write buffers without the need for threads.
  - (object.c)
    Made restore_value reentrant. (Bug #548)
  
14-Jan-2009 (Zesstra)
  - (doc/driver/limitations)
    Started to assemble a list of non-configurable limits - to be extended...

13-Jan-2009 (Zesstra)
  - (simulate.c)
    Reallowed empty object names (/.c) (#525)

12-Jan-2009 (Lars Duening)  (3.3.718)
  - Created snapshot.

06 Jan 2009 (Fuchur)
  - (util/xerq/erq.c, util/xerq/defs.h)
    Remove dependency on the driver's random number generator - the
    libc one should serve us just fine.

04-Jan 2009 (Zesstra)
  - (interpret.c, interpret.h)
    Changed ASSIGN_EVAL_COST to a static inline function assign_eval_cost_inl()
      and use it consistently in interpret.c.
    Changed MAX_SHIFT to a static const.
  - (mstrings.h, mstrings.c, strfuns.c)
    Changed some code defines to static inline functions.
    Renamed the variables mstr_tabled and mstr_untabled to mstr_tabled_count
      and mstr_untabled_count. (They had the same name as the old defines which
      are now functions).
    Removed unused and now superfluous ref_mstring_safe, mstring_ref(),
      deref_mstring_safe, mstring_deref(), because ref_mstring() and
      deref_mstring() can now handle arguments with side-effects.
    Added some casts to remove the const from const arguments when passing them
    off to get_txt(). (Don't worry, it is only cosmetic and temporary.)
  - (random.h, random.c, main.c, autoconf/configure.in, config.h.in, efuns.c,
      random/*)
    Exchanged the Mersenne Twister (pseudo random number generator) by the
      SIMD-oriented Fast Mersenne Twister (SFMT) to support random numbers up
      to 2^63-1 on 64 bit platforms:
      http://www.math.sci.hiroshima-u.ac.jp/~m-mat/MT/SFMT/