@@ -6,6 +6,8 @@ See the file HISTORY for a user-oriented summary of all the changes.
     Use of write buffers without the need for threads.
   - (object.c)
     Made restore_value reentrant. (Bug #548)
+  - (prolang.y)
+    Removed useless code.
   
 14-Jan-2009 (Zesstra)
   - (doc/driver/limitations)
